image into a sphere.... very cool.  working on some caching stuff and the
way ee will create its directories... everything will be in your home dir
under .ee2/cache, i think that this is fair enough.  it was either that or
do .ee2 directories all over the place, which i dont have a problem with,
but i would have gotten a lot of shit about it...

many thanks to Nolan Goodnight for the texture mapping code, he's also
working on some more stuff for it which will be full of goody good goodness.
now, it back to work...  should have the keybindings for the main window
done today... later for now...

-------------------------------------------------------------------------------

Fri Mar 10 00:18:34 CST 2000
(dphase)

wheeeeeeeeee! we have the thumbnail window in the image browser working now!
scales the thumbnail to whatever size the area2 widget is, usually going to
be around 150 pixels or so.... pretty cool.

-------------------------------------------------------------------------------

Fri Mar 10 15:23:45 CST 2000
(dphase)

Added Nolan's sphre mapping patch to clear the window then create the
sphere, also edited the sphere-map-test image a bit...

-------------------------------------------------------------------------------

Sun Mar 12 20:31:44 CST 2000
(dphase)

Alright, you can hide the main window while browsing images now... did some
work on the placement of the widgets, user shouldnt notice anything...

-------------------------------------------------------------------------------

Mon Mar 13 16:42:57 CST 2000
(dphase)

Ok, i think i've fixed all of the _major_ glitches i was having with the
thumbnail rendering stuff

-------------------------------------------------------------------------------

Wed Mar 15 15:36:56 CST 2000
(dphase)

wow, the indentions and formatting in *.[ch] was _terrible_.  this should
all be fixed now. yippie.

-------------------------------------------------------------------------------
